--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" /> 
-   <link rel="stylesheet" href="css/main.min.css">
+   <link rel="stylesheet" href="./build/css/styles.css">
 </head>
 <body>
    <header>
@@ -15,9 +15,9 @@
       <button class="nav-toggle">
          <span class="hamburger" aria-label="toggle navigation"></span>
       </button>
-      <nav class="nav">
+      <nav class="nav bg-red-100 rounded-full p-5 text-green-500">
          <ul class="nav__list">
-            <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+            <li class="nav__item hover:text-blue-400"><a href="#home" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
             <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
             <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
