--- a/public/index.html
+++ b/public/index.html
@@ -69,26 +69,24 @@
 
 		<!-- Hero Text -->
 		<div class="container mx-auto p-4 my-auto">
-				<h1 class="my-5 text-2xl md:text-3xl lg:text-5xl text-gray-200 leading-tight">
+				<h1 class="heading__primary">
 					Hi! I'm <span class="text-yellow-500">{</span><span class="font-bold"> Rabson Phiri </span><span class="text-yellow-500">}</span>
 				</h1>
 				<div class="max-w-lg">
-					<p class="bg-red-500 p-3 mb-3 inline-block">Full Stack Web & Mobile Developer</p>
-					<p class="leading-normal text-gray-400 text-base md:text-xl lg:text-2xl mb-8">
+					<p class="bg-yellow-500 p-3 mb-3 inline-block">Full Stack Web Developer</p>
+					<p class="hero__text mb-8">
 						I make beautiful and interactive websites and mobile apps with a focus on user engagement
 					</p>
 				</div>
 
-				<div>
 					<button
-					class="btn btn__primary md:my-6">
+					class="btn btn__primary sm:mr-3 md:mr-4 lg:mr-5">
 						Contact Me
 					</button>
 					<a href="#" download="Rabson Phiri's Resume"
-					class="btn btn__transparent md:my-6 inline-block">
+					class="btn btn__transparent inline-block">
 						My Resume
 					</a>
-				</div>
 		</div>
 				
 		</div>
@@ -290,7 +288,7 @@
                 <form action="" class="mt-6">
                     <div class="my-5 text-sm">
                         <label for="email" class="block text-gray-300 font-bold">Email</label>
-                        <input type="email" autofocus id="email" class="rounded-sm px-4 py-3 mt-3 focus:outline-none bg-indigo-100 w-full text-gray-600" placeholder="Your Email Address" />
+                        <input type="email" id="email" class="rounded-sm px-4 py-3 mt-3 focus:outline-none bg-indigo-100 w-full text-gray-600" placeholder="Your Email Address" />
                     </div>
                     <div class="my-5 text-sm">
                         <label for="message" class="block text-gray-400 font-bold">Message</label>
