--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,13 @@
 		<header class="min-h-screen bg-gray-900 leading-relaxed tracking-wide flex flex-col">
 
 		<!-- Hero Text -->
+
 		<div class="container mx-auto p-4 my-auto">
-				<h1 class="heading__primary mb-8">
+				<h1 class="heading__primary my-8">
 					Hi! I'm <span class="text-yellow-500">{</span><span class="font-bold"> Rabson Phiri </span><span class="text-yellow-500">}</span>
 				</h1>
 				<div class="max-w-lg">
-					<p class="bg-yellow-500 p-3 mb-3 inline-block">Full Stack Web Developer</p>
+					<p class="bg-yellow-500 p-3 mb-5 inline-block">Full Stack Web Developer</p>
 					<p class="hero__text mb-8">
 						I make beautiful and interactive websites and mobile apps with a focus on user engagement
 					</p>
@@ -61,14 +62,14 @@
 					class="btn btn__transparent inline-block">
 						My Resume
 					</a>
-		</div>
+				</div>
 				
 		</div>
 		</header>
 		<!--Nav-->
 
 		<!-- About Me -->
-		<section class="bg-gray-100 border-b">
+		<section class="section bg-gray-100">
 			<div class="container max-w-5xl mx-auto m-8">
 				<h2 class="heading__secondary text-center">
 					About Me
@@ -302,5 +303,20 @@
 				</p>
 			</div>
 		</footer>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.dots.min.js"></script>
+<script>
+VANTA.DOTS({
+  el: "header",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 300.00,
+  minWidth: 300.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: 0xF59E0B
+})
+</script>
 	</body>
 </html>
