--- a/public/index.html
+++ b/public/index.html
@@ -115,31 +115,38 @@
 				</h2>
 
 				<div class="flex flex-1 flex-wrap items-center justify-between text-xl text-gray-500 font-bold opacity-75">
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fab fa-git-alt text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fab fa-git-alt text-5xl"></i>
 						<span>Git</span>
 					</span>
 
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fab fa-js text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fab fa-js text-5xl"></i>
 						<span>JavaScript (ES6)</span>
 					</span>
 
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fab fa-css3-alt text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fab fa-css3-alt text-5xl"></i>
 						<span>CSS</span>
 					</span>
 
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fab fa-html5 text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fab fa-html5 text-5xl"></i>
 						<span>HTML</span>
 					</span>
 
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fab fa-react text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fab fa-react text-5xl"></i>
 						<span>React.js</span>
 					</span>
 
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fab fa-node text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fab fa-node text-5xl"></i>
 						<span>Node.js</span>
 					</span>
 
-					<span class="w-1/2 p-4 md:w-auto flex flex-col items-center"><i class="fas fa-database text-5xl"></i>
+					<span class="flex-box-col">
+						<i class="fas fa-database text-5xl"></i>
 						<span>MySQL</span>
 					</span>
 
