--- a/public/index.html
+++ b/public/index.html
@@ -318,10 +318,10 @@ VANTA.DOTS({
   mouseControls: true,
   touchControls: true,
   gyroControls: false,
-  minHeight: 300.00,
+  minHeight: 500.00,
   minWidth: 300.00,
   scale: 1.00,
-  scaleMobile: 1.00,
+//   scaleMobile: 1.00,
   color: 0xF59E0B
 })
 </script>
